@@ -3816,7 +3816,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:4`
 
 ```console
-$ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e19b248accd8c79c5e
+$ docker pull geonetwork@sha256:7e1b164ca75ea2c825f057cc5a1ee4cc86ef026d786633ac762d9d10a060abd4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -3827,14 +3827,14 @@ $ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e1
 ### `geonetwork:4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:c911395206e3e63fa66a808cba4fd0dbe780a556bbace3ce31e12b43accded91
+$ docker pull geonetwork@sha256:27092cacdebecd5610bfea6b9d60c80d567c7af32425255e9c20aa41887f03ab
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **487.4 MB (487376247 bytes)**  
+-	Total Size: **488.1 MB (488100381 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:cfe4971007daf7499ae67b060cf6c499814a43351c24f1e33be7cd90b2f0c3bc`
+-	Image ID: `sha256:89b6f17897502b967a7f49026d119045bc9f2184e6d7865a910b06b552210e89`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -3915,23 +3915,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 14:42:04 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 14:42:17 GMT
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 17:53:46 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -3968,34 +3968,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
 		Size: 482.8 KB (482845 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d91b104440c142ff04b1edb2cd7fda4480f65253c939485733b8bbd85699e1df`  
-		Last Modified: Tue, 16 Apr 2024 14:43:54 GMT  
-		Size: 285.8 MB (285840700 bytes)  
+	-	`sha256:bb716d162720bba52697aa9b030130c4f7c99e13a5af938cec8b978089355286`  
+		Last Modified: Thu, 18 Apr 2024 17:54:25 GMT  
+		Size: 286.6 MB (286564836 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fc5e35a63d6d62df654a18109d540d8bf1fc7fe895224d8dee516f7219012b31`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 583.0 B  
+	-	`sha256:782f8f525f0d28805e60fdd35d0b155fe6dc0efccecc781fb56dd54ec0de79c6`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:ef34514ffaa296f76f61f9ddaa6a3a787e2e1117275746811f0e50a34bcb2830`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
+	-	`sha256:5f9ab3c22e04b7f6245d0732f937b3894103aa36741ad6723cf64297c9e0298f`  
+		Last Modified: Thu, 18 Apr 2024 17:54:13 GMT  
 		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7b20684410d916d5d15d1ee7b851b19382ebbe671aa3f2dc2bc10e0d86d5645b`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 171.0 B  
+	-	`sha256:fd6cf58ae3583b5bb320b0bac698259b41e87118032240d9f5d9669241ae3d19`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 170.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:4` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:1002eb1e5b354e2f5c22e9ba16dc902fe50691e52afbcd482196484c3aba2bcd
+$ docker pull geonetwork@sha256:5b2c3ad901e728036469aa5f2f27407c280b5ea82f71c9fe8985bdc80852cad0
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **482.6 MB (482579450 bytes)**  
+-	Total Size: **483.3 MB (483303597 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6eae10f15b0c4b8bc90244e8b9601d535d8a1c782142e37f2b086c4941192be1`
+-	Image ID: `sha256:3a60ffe2b1197b1bc72d452428d5e6cac8d19dcd8a9e1080094b092e6753f313`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4076,23 +4076,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 10:34:50 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 10:35:13 GMT
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 18:06:36 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 10:35:15 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 10:35:16 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:39 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4129,21 +4129,21 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
 		Size: 481.3 KB (481345 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:cbb0c8f88db81e21fcbed65b96a846d4493c6017ec3f8d2df5a600884cfdb12c`  
-		Last Modified: Tue, 16 Apr 2024 10:36:42 GMT  
-		Size: 285.8 MB (285840750 bytes)  
+	-	`sha256:d02a903878923a669c6bf8dc39ca6daf0445b840474caa311726b78edc7c578b`  
+		Last Modified: Thu, 18 Apr 2024 18:07:09 GMT  
+		Size: 286.6 MB (286564894 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2b65c6e77be14eff259b42e59270669dde118cfc526ebbc4bdea85930402c69d`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 580.0 B  
+	-	`sha256:32a42610a876403ab2374cfe9a57f011d244004484cca3fa1e089f0ecc9ea3fd`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fb63c5b57fdb3ba7ce30929450ec0820b74f6761a80ffc03574ee35442cb62a6`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
+	-	`sha256:a7f05f90633badb67c51f991ffd7deb38fdaf458f0e4928beb452a3f005d49bf`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bc2a6042181392da240cc9e961a8a9552d1c4fa8abd4ec9d500d486a542d2a79`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 168.0 B  
+	-	`sha256:59fb8cf64752a00bc85a90ff0817437608e54dd60befea098e6bdb0af0c2aa2f`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 169.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.2`
@@ -4743,7 +4743,7 @@ VOLUME [/catalogue-data]
 ## `geonetwork:4.4`
 
 ```console
-$ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e19b248accd8c79c5e
+$ docker pull geonetwork@sha256:7e1b164ca75ea2c825f057cc5a1ee4cc86ef026d786633ac762d9d10a060abd4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -4754,14 +4754,14 @@ $ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e1
 ### `geonetwork:4.4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:c911395206e3e63fa66a808cba4fd0dbe780a556bbace3ce31e12b43accded91
+$ docker pull geonetwork@sha256:27092cacdebecd5610bfea6b9d60c80d567c7af32425255e9c20aa41887f03ab
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **487.4 MB (487376247 bytes)**  
+-	Total Size: **488.1 MB (488100381 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:cfe4971007daf7499ae67b060cf6c499814a43351c24f1e33be7cd90b2f0c3bc`
+-	Image ID: `sha256:89b6f17897502b967a7f49026d119045bc9f2184e6d7865a910b06b552210e89`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4842,23 +4842,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 14:42:04 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 14:42:17 GMT
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 17:53:46 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4895,34 +4895,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
 		Size: 482.8 KB (482845 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d91b104440c142ff04b1edb2cd7fda4480f65253c939485733b8bbd85699e1df`  
-		Last Modified: Tue, 16 Apr 2024 14:43:54 GMT  
-		Size: 285.8 MB (285840700 bytes)  
+	-	`sha256:bb716d162720bba52697aa9b030130c4f7c99e13a5af938cec8b978089355286`  
+		Last Modified: Thu, 18 Apr 2024 17:54:25 GMT  
+		Size: 286.6 MB (286564836 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fc5e35a63d6d62df654a18109d540d8bf1fc7fe895224d8dee516f7219012b31`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 583.0 B  
+	-	`sha256:782f8f525f0d28805e60fdd35d0b155fe6dc0efccecc781fb56dd54ec0de79c6`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:ef34514ffaa296f76f61f9ddaa6a3a787e2e1117275746811f0e50a34bcb2830`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
+	-	`sha256:5f9ab3c22e04b7f6245d0732f937b3894103aa36741ad6723cf64297c9e0298f`  
+		Last Modified: Thu, 18 Apr 2024 17:54:13 GMT  
 		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7b20684410d916d5d15d1ee7b851b19382ebbe671aa3f2dc2bc10e0d86d5645b`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 171.0 B  
+	-	`sha256:fd6cf58ae3583b5bb320b0bac698259b41e87118032240d9f5d9669241ae3d19`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 170.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:4.4` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:1002eb1e5b354e2f5c22e9ba16dc902fe50691e52afbcd482196484c3aba2bcd
+$ docker pull geonetwork@sha256:5b2c3ad901e728036469aa5f2f27407c280b5ea82f71c9fe8985bdc80852cad0
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **482.6 MB (482579450 bytes)**  
+-	Total Size: **483.3 MB (483303597 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6eae10f15b0c4b8bc90244e8b9601d535d8a1c782142e37f2b086c4941192be1`
+-	Image ID: `sha256:3a60ffe2b1197b1bc72d452428d5e6cac8d19dcd8a9e1080094b092e6753f313`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -5003,23 +5003,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 10:34:50 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 10:35:13 GMT
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 18:06:36 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 10:35:15 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 10:35:16 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:39 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -5056,31 +5056,360 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
 		Size: 481.3 KB (481345 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:cbb0c8f88db81e21fcbed65b96a846d4493c6017ec3f8d2df5a600884cfdb12c`  
-		Last Modified: Tue, 16 Apr 2024 10:36:42 GMT  
-		Size: 285.8 MB (285840750 bytes)  
+	-	`sha256:d02a903878923a669c6bf8dc39ca6daf0445b840474caa311726b78edc7c578b`  
+		Last Modified: Thu, 18 Apr 2024 18:07:09 GMT  
+		Size: 286.6 MB (286564894 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2b65c6e77be14eff259b42e59270669dde118cfc526ebbc4bdea85930402c69d`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 580.0 B  
+	-	`sha256:32a42610a876403ab2374cfe9a57f011d244004484cca3fa1e089f0ecc9ea3fd`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fb63c5b57fdb3ba7ce30929450ec0820b74f6761a80ffc03574ee35442cb62a6`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
+	-	`sha256:a7f05f90633badb67c51f991ffd7deb38fdaf458f0e4928beb452a3f005d49bf`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bc2a6042181392da240cc9e961a8a9552d1c4fa8abd4ec9d500d486a542d2a79`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 168.0 B  
+	-	`sha256:59fb8cf64752a00bc85a90ff0817437608e54dd60befea098e6bdb0af0c2aa2f`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 169.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.4.4`
 
-**does not exist** (yet?)
+```console
+$ docker pull geonetwork@sha256:7e1b164ca75ea2c825f057cc5a1ee4cc86ef026d786633ac762d9d10a060abd4
+```
+
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
+-	Platforms: 2
+	-	linux; amd64
+	-	linux; arm64 variant v8
+
+### `geonetwork:4.4.4` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:27092cacdebecd5610bfea6b9d60c80d567c7af32425255e9c20aa41887f03ab
+```
+
+-	Docker Version: 20.10.23
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **488.1 MB (488100381 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:89b6f17897502b967a7f49026d119045bc9f2184e6d7865a910b06b552210e89`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Wed, 10 Apr 2024 18:50:35 GMT
+ARG RELEASE
+# Wed, 10 Apr 2024 18:50:35 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Wed, 10 Apr 2024 18:50:35 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Wed, 10 Apr 2024 18:50:35 GMT
+LABEL org.opencontainers.image.version=20.04
+# Wed, 10 Apr 2024 18:50:37 GMT
+ADD file:ea2128e23dce0162557abadd80656bd5ae047d573095d1d4323eb4154490dfdc in / 
+# Wed, 10 Apr 2024 18:50:37 GMT
+CMD ["/bin/bash"]
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV JAVA_VERSION=jdk-11.0.22+7
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='ca1dc604352e9b3906b8955a700745a0a650ed59947f7f354af597871876a716';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.22_7.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='25cf602cac350ef36067560a4e8042919f3be973d419eac4d839e2e0000b2cc8';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_x64_linux_hotspot_11.0.22_7.tar.gz';          ;;        armhf|arm)          ESUM='7d0e71d8aea6bba27dfbb9ad7434066896c3085327e58776ca89d5e262040bc5';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_arm_linux_hotspot_11.0.22_7.tar.gz';          ;;        ppc64el|powerpc:common64)          ESUM='95a1c215e434c302e43c8039f322b954ee539ca22412cd09b4dd77523aaa861a';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_ppc64le_linux_hotspot_11.0.22_7.tar.gz';          ;;        s390x|s390:64-bit)          ESUM='137becfcfa6d288ba8c07ba23bf966c87bedfe7ee5cb3342da833407e13e3cfa';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_s390x_linux_hotspot_11.0.22_7.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig;     java -Xshare:dump; # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     echo "Verifying install ...";     fileEncoding="$(echo 'System.out.println(System.getProperty("file.encoding"))' | jshell -s -)"; [ "$fileEncoding" = 'UTF-8' ]; rm -rf ~/.java;     echo "javac --version"; javac --version;     echo "java --version"; java --version;     echo "Complete." # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Thu, 25 Jan 2024 11:07:04 GMT
+CMD ["jshell"]
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV TMPDIR=/tmp/jetty
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Tue, 16 Apr 2024 08:46:32 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Tue, 16 Apr 2024 08:46:52 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Tue, 16 Apr 2024 08:46:53 GMT
+WORKDIR /var/lib/jetty
+# Tue, 16 Apr 2024 08:46:53 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Tue, 16 Apr 2024 08:46:53 GMT
+USER jetty
+# Tue, 16 Apr 2024 08:46:53 GMT
+EXPOSE 8080
+# Tue, 16 Apr 2024 08:46:53 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Tue, 16 Apr 2024 08:46:53 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 16 Apr 2024 14:41:58 GMT
+ENV DATA_DIR=/catalogue-data
+# Tue, 16 Apr 2024 14:41:59 GMT
+ENV WEBAPP_CONTEXT_PATH=/geonetwork
+# Tue, 16 Apr 2024 14:41:59 GMT
+ENV GN_CONFIG_PROPERTIES=-Dgeonetwork.dir=/catalogue-data         -Dgeonetwork.formatter.dir=/catalogue-data/data/formatter         -Dgeonetwork.schema.dir=/opt/geonetwork/WEB-INF/data/config/schema_plugins         -Dgeonetwork.indexConfig.dir=/opt/geonetwork/WEB-INF/data/config/index
+# Tue, 16 Apr 2024 14:41:59 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC
+# Tue, 16 Apr 2024 14:41:59 GMT
+USER root
+# Tue, 16 Apr 2024 14:42:04 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /opt/geonetwork &&     chown -R jetty:jetty /opt/geonetwork
+# Tue, 16 Apr 2024 14:42:04 GMT
+USER jetty
+# Tue, 16 Apr 2024 14:42:04 GMT
+ENV GN_FILE=geonetwork.war
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 17:53:46 GMT
+RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Thu, 18 Apr 2024 17:53:48 GMT
+COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
+# Thu, 18 Apr 2024 17:53:48 GMT
+COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
+# Thu, 18 Apr 2024 17:53:49 GMT
+RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
+# Thu, 18 Apr 2024 17:53:49 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Thu, 18 Apr 2024 17:53:49 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Thu, 18 Apr 2024 17:53:49 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:80888bc6716fcbb8874e75ac88898d3e38e6f1bc55678f0e97ca9d706b7f3733`  
+		Last Modified: Fri, 12 Apr 2024 07:27:49 GMT  
+		Size: 28.6 MB (28584506 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:9bf168757422d85fc784edd9f8eab4082cd0da552a3faa4294d478d5faf0594d`  
+		Last Modified: Tue, 16 Apr 2024 04:03:22 GMT  
+		Size: 16.9 MB (16920620 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:340c85aa2f68ed3a510ca38f7ea844ef7e4f1b9eef6ab89efff128757240ad95`  
+		Last Modified: Tue, 16 Apr 2024 04:04:40 GMT  
+		Size: 145.3 MB (145288499 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:18bb8f89050839923650ab8c87dc0594bc5834e5e7f415b6641f1cd4891e6782`  
+		Last Modified: Tue, 16 Apr 2024 04:04:28 GMT  
+		Size: 175.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:64f7d2a5a8c7dfe949504f3ac84e5c4f0c09ad820cfff9a3954a39fd491a2fc6`  
+		Last Modified: Tue, 16 Apr 2024 04:04:28 GMT  
+		Size: 734.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:38991b768a61f6677a6915fdae96ebf832b8111ed4095a5d5cd9cb1830696b9f`  
+		Last Modified: Tue, 16 Apr 2024 09:00:04 GMT  
+		Size: 10.3 MB (10255213 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:72c6e7de70c2809f0f73544d0b365d172a7c6a0957bc9a615f1c990e12b5205b`  
+		Last Modified: Tue, 16 Apr 2024 09:00:02 GMT  
+		Size: 1.6 KB (1633 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5244df6524ee74b5445dcda798033554c5d1217e6a2db9c962eb380ee6e542a8`  
+		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
+		Size: 482.8 KB (482845 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:bb716d162720bba52697aa9b030130c4f7c99e13a5af938cec8b978089355286`  
+		Last Modified: Thu, 18 Apr 2024 17:54:25 GMT  
+		Size: 286.6 MB (286564836 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:782f8f525f0d28805e60fdd35d0b155fe6dc0efccecc781fb56dd54ec0de79c6`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 582.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5f9ab3c22e04b7f6245d0732f937b3894103aa36741ad6723cf64297c9e0298f`  
+		Last Modified: Thu, 18 Apr 2024 17:54:13 GMT  
+		Size: 568.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fd6cf58ae3583b5bb320b0bac698259b41e87118032240d9f5d9669241ae3d19`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 170.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+
+### `geonetwork:4.4.4` - linux; arm64 variant v8
+
+```console
+$ docker pull geonetwork@sha256:5b2c3ad901e728036469aa5f2f27407c280b5ea82f71c9fe8985bdc80852cad0
+```
+
+-	Docker Version: 20.10.23
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **483.3 MB (483303597 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:3a60ffe2b1197b1bc72d452428d5e6cac8d19dcd8a9e1080094b092e6753f313`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Wed, 10 Apr 2024 19:07:29 GMT
+ARG RELEASE
+# Wed, 10 Apr 2024 19:07:30 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Wed, 10 Apr 2024 19:07:30 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Wed, 10 Apr 2024 19:07:30 GMT
+LABEL org.opencontainers.image.version=20.04
+# Wed, 10 Apr 2024 19:07:39 GMT
+ADD file:acbed61dbc48e6a7411bf9844ddddb8ea75cd88378599d63b0b603e98acf0762 in / 
+# Wed, 10 Apr 2024 19:07:40 GMT
+CMD ["/bin/bash"]
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENV JAVA_VERSION=jdk-11.0.22+7
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='ca1dc604352e9b3906b8955a700745a0a650ed59947f7f354af597871876a716';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.22_7.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='25cf602cac350ef36067560a4e8042919f3be973d419eac4d839e2e0000b2cc8';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_x64_linux_hotspot_11.0.22_7.tar.gz';          ;;        armhf|arm)          ESUM='7d0e71d8aea6bba27dfbb9ad7434066896c3085327e58776ca89d5e262040bc5';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_arm_linux_hotspot_11.0.22_7.tar.gz';          ;;        ppc64el|powerpc:common64)          ESUM='95a1c215e434c302e43c8039f322b954ee539ca22412cd09b4dd77523aaa861a';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_ppc64le_linux_hotspot_11.0.22_7.tar.gz';          ;;        s390x|s390:64-bit)          ESUM='137becfcfa6d288ba8c07ba23bf966c87bedfe7ee5cb3342da833407e13e3cfa';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_s390x_linux_hotspot_11.0.22_7.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig;     java -Xshare:dump; # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+RUN set -eux;     echo "Verifying install ...";     fileEncoding="$(echo 'System.out.println(System.getProperty("file.encoding"))' | jshell -s -)"; [ "$fileEncoding" = 'UTF-8' ]; rm -rf ~/.java;     echo "javac --version"; javac --version;     echo "java --version"; java --version;     echo "Complete." # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Thu, 25 Jan 2024 11:07:04 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Thu, 25 Jan 2024 11:07:04 GMT
+CMD ["jshell"]
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV TMPDIR=/tmp/jetty
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Tue, 16 Apr 2024 07:25:09 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Tue, 16 Apr 2024 07:25:25 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Tue, 16 Apr 2024 07:25:25 GMT
+WORKDIR /var/lib/jetty
+# Tue, 16 Apr 2024 07:25:25 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Tue, 16 Apr 2024 07:25:26 GMT
+USER jetty
+# Tue, 16 Apr 2024 07:25:26 GMT
+EXPOSE 8080
+# Tue, 16 Apr 2024 07:25:26 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Tue, 16 Apr 2024 07:25:26 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 16 Apr 2024 10:34:46 GMT
+ENV DATA_DIR=/catalogue-data
+# Tue, 16 Apr 2024 10:34:46 GMT
+ENV WEBAPP_CONTEXT_PATH=/geonetwork
+# Tue, 16 Apr 2024 10:34:46 GMT
+ENV GN_CONFIG_PROPERTIES=-Dgeonetwork.dir=/catalogue-data         -Dgeonetwork.formatter.dir=/catalogue-data/data/formatter         -Dgeonetwork.schema.dir=/opt/geonetwork/WEB-INF/data/config/schema_plugins         -Dgeonetwork.indexConfig.dir=/opt/geonetwork/WEB-INF/data/config/index
+# Tue, 16 Apr 2024 10:34:46 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC
+# Tue, 16 Apr 2024 10:34:46 GMT
+USER root
+# Tue, 16 Apr 2024 10:34:50 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /opt/geonetwork &&     chown -R jetty:jetty /opt/geonetwork
+# Tue, 16 Apr 2024 10:34:50 GMT
+USER jetty
+# Tue, 16 Apr 2024 10:34:50 GMT
+ENV GN_FILE=geonetwork.war
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 18:06:36 GMT
+RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Thu, 18 Apr 2024 18:06:38 GMT
+COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
+# Thu, 18 Apr 2024 18:06:38 GMT
+COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
+# Thu, 18 Apr 2024 18:06:39 GMT
+RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
+# Thu, 18 Apr 2024 18:06:40 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Thu, 18 Apr 2024 18:06:40 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Thu, 18 Apr 2024 18:06:40 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:7688b82426696e44f961201d38c484dd5279eb88689c7eadb2100dd075e697f8`  
+		Last Modified: Fri, 12 Apr 2024 07:29:54 GMT  
+		Size: 27.2 MB (27204984 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0d2f0d048c4dc921b108e92215dcba18b91b316fdaad6521463665d94fdab64c`  
+		Last Modified: Tue, 16 Apr 2024 02:55:17 GMT  
+		Size: 16.8 MB (16777181 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:de49f131a4c840907a9473cb7aca6a6bc080185a5fb30fc7f60ce72e9c1635ba`  
+		Last Modified: Tue, 16 Apr 2024 02:56:25 GMT  
+		Size: 142.0 MB (142015833 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0bc1acc04f8bd12be5556a8bb55e7f180762d6324c4ba743590db29dd433650c`  
+		Last Modified: Tue, 16 Apr 2024 02:56:15 GMT  
+		Size: 175.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f2064278750ddac376cecac409fd1b9579364878f3facb858e5e3e6655de399d`  
+		Last Modified: Tue, 16 Apr 2024 02:56:15 GMT  
+		Size: 733.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:af10df0b72a98420ea57e99df7c0db871d845215f9237e773320316c2e9bca96`  
+		Last Modified: Tue, 16 Apr 2024 07:35:35 GMT  
+		Size: 10.3 MB (10255500 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:e55edebe0cd769dbc571714088dc6e0d0dbc376ac9a202d6bba561081718edbb`  
+		Last Modified: Tue, 16 Apr 2024 07:35:34 GMT  
+		Size: 1.6 KB (1634 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:cf0e89bb6afa4732ef41b2d7b889a061a783bdf3956230e17f538391f1815ad7`  
+		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
+		Size: 481.3 KB (481345 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d02a903878923a669c6bf8dc39ca6daf0445b840474caa311726b78edc7c578b`  
+		Last Modified: Thu, 18 Apr 2024 18:07:09 GMT  
+		Size: 286.6 MB (286564894 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:32a42610a876403ab2374cfe9a57f011d244004484cca3fa1e089f0ecc9ea3fd`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 582.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a7f05f90633badb67c51f991ffd7deb38fdaf458f0e4928beb452a3f005d49bf`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 567.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:59fb8cf64752a00bc85a90ff0817437608e54dd60befea098e6bdb0af0c2aa2f`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 169.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e19b248accd8c79c5e
+$ docker pull geonetwork@sha256:7e1b164ca75ea2c825f057cc5a1ee4cc86ef026d786633ac762d9d10a060abd4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -5091,14 +5420,14 @@ $ docker pull geonetwork@sha256:78fdcbf9d496172807166c6a5ee8e59991a0b40a35c3d6e1
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:c911395206e3e63fa66a808cba4fd0dbe780a556bbace3ce31e12b43accded91
+$ docker pull geonetwork@sha256:27092cacdebecd5610bfea6b9d60c80d567c7af32425255e9c20aa41887f03ab
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **487.4 MB (487376247 bytes)**  
+-	Total Size: **488.1 MB (488100381 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:cfe4971007daf7499ae67b060cf6c499814a43351c24f1e33be7cd90b2f0c3bc`
+-	Image ID: `sha256:89b6f17897502b967a7f49026d119045bc9f2184e6d7865a910b06b552210e89`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -5179,23 +5508,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 14:42:04 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 14:42:04 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 14:42:17 GMT
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 17:53:31 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 17:53:46 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 14:42:19 GMT
+# Thu, 18 Apr 2024 17:53:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 14:42:20 GMT
+# Thu, 18 Apr 2024 17:53:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -5232,34 +5561,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
 		Size: 482.8 KB (482845 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d91b104440c142ff04b1edb2cd7fda4480f65253c939485733b8bbd85699e1df`  
-		Last Modified: Tue, 16 Apr 2024 14:43:54 GMT  
-		Size: 285.8 MB (285840700 bytes)  
+	-	`sha256:bb716d162720bba52697aa9b030130c4f7c99e13a5af938cec8b978089355286`  
+		Last Modified: Thu, 18 Apr 2024 17:54:25 GMT  
+		Size: 286.6 MB (286564836 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fc5e35a63d6d62df654a18109d540d8bf1fc7fe895224d8dee516f7219012b31`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 583.0 B  
+	-	`sha256:782f8f525f0d28805e60fdd35d0b155fe6dc0efccecc781fb56dd54ec0de79c6`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:ef34514ffaa296f76f61f9ddaa6a3a787e2e1117275746811f0e50a34bcb2830`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
+	-	`sha256:5f9ab3c22e04b7f6245d0732f937b3894103aa36741ad6723cf64297c9e0298f`  
+		Last Modified: Thu, 18 Apr 2024 17:54:13 GMT  
 		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7b20684410d916d5d15d1ee7b851b19382ebbe671aa3f2dc2bc10e0d86d5645b`  
-		Last Modified: Tue, 16 Apr 2024 14:43:38 GMT  
-		Size: 171.0 B  
+	-	`sha256:fd6cf58ae3583b5bb320b0bac698259b41e87118032240d9f5d9669241ae3d19`  
+		Last Modified: Thu, 18 Apr 2024 17:54:10 GMT  
+		Size: 170.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:latest` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:1002eb1e5b354e2f5c22e9ba16dc902fe50691e52afbcd482196484c3aba2bcd
+$ docker pull geonetwork@sha256:5b2c3ad901e728036469aa5f2f27407c280b5ea82f71c9fe8985bdc80852cad0
 ```
 
 -	Docker Version: 20.10.23
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **482.6 MB (482579450 bytes)**  
+-	Total Size: **483.3 MB (483303597 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6eae10f15b0c4b8bc90244e8b9601d535d8a1c782142e37f2b086c4941192be1`
+-	Image ID: `sha256:3a60ffe2b1197b1bc72d452428d5e6cac8d19dcd8a9e1080094b092e6753f313`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -5340,23 +5669,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Tue, 16 Apr 2024 10:34:50 GMT
 ENV GN_FILE=geonetwork.war
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_VERSION=4.4.3
-# Tue, 16 Apr 2024 10:34:50 GMT
-ENV GN_DOWNLOAD_MD5=7b5ff11296381c415bf927f283a421bf
-# Tue, 16 Apr 2024 10:35:13 GMT
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_VERSION=4.4.4
+# Thu, 18 Apr 2024 18:05:33 GMT
+ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
+# Thu, 18 Apr 2024 18:06:36 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Tue, 16 Apr 2024 10:35:15 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Tue, 16 Apr 2024 10:35:16 GMT
+# Thu, 18 Apr 2024 18:06:38 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:39 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 16 Apr 2024 10:35:17 GMT
+# Thu, 18 Apr 2024 18:06:40 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -5393,19 +5722,19 @@ VOLUME [/catalogue-data]
 		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
 		Size: 481.3 KB (481345 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:cbb0c8f88db81e21fcbed65b96a846d4493c6017ec3f8d2df5a600884cfdb12c`  
-		Last Modified: Tue, 16 Apr 2024 10:36:42 GMT  
-		Size: 285.8 MB (285840750 bytes)  
+	-	`sha256:d02a903878923a669c6bf8dc39ca6daf0445b840474caa311726b78edc7c578b`  
+		Last Modified: Thu, 18 Apr 2024 18:07:09 GMT  
+		Size: 286.6 MB (286564894 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2b65c6e77be14eff259b42e59270669dde118cfc526ebbc4bdea85930402c69d`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 580.0 B  
+	-	`sha256:32a42610a876403ab2374cfe9a57f011d244004484cca3fa1e089f0ecc9ea3fd`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 582.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fb63c5b57fdb3ba7ce30929450ec0820b74f6761a80ffc03574ee35442cb62a6`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
+	-	`sha256:a7f05f90633badb67c51f991ffd7deb38fdaf458f0e4928beb452a3f005d49bf`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bc2a6042181392da240cc9e961a8a9552d1c4fa8abd4ec9d500d486a542d2a79`  
-		Last Modified: Tue, 16 Apr 2024 10:36:29 GMT  
-		Size: 168.0 B  
+	-	`sha256:59fb8cf64752a00bc85a90ff0817437608e54dd60befea098e6bdb0af0c2aa2f`  
+		Last Modified: Thu, 18 Apr 2024 18:06:57 GMT  
+		Size: 169.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
